<resources>
    <string name="app_name">BookSearch</string>
    <string name="action_settings">Settings</string>
    <string name="published_by">published by</string>
    <string name="written_by">written by</string>
    <string name="publication_date">Publication date: </string>
    <string name="edition">Edition: </string>
    <string name="author">Author:</string>
    <string name="authors">Authors:</string>
    <string name="publisher">Publisher:</string>
    <string name="bs_home">BookSearch - Home</string>
    <string name="bs_search_results">BookSearch - Search Results</string>
    <string name="bs_details">BookSearch - Details</string>
    <string name="bs_favorites">BookSearch - Favorites</string>
    <string name="exit">Exit</string>
    <string name="favorites">Favorites</string>
    <string name="legal_information">Legal Information</string>
    <string name="general_business_terms">General Business Terms</string>
    <string name="search_editText_hint">Enter book title, isbn or keywords...</string>
    <string name="search">Search</string>
    <string name="businessInformationText">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,...</string>
    <string name="legal_information_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc...</string>
    <string name="bs_information">BookSearch - Information</string>
    <string name="businessInformationTitle">GENERAL BUSINESS INFORMATION</string>
    <string name="legal_information_title">LEGAL INFORMATION</string>
    <string name="language">Language</string>
    <string name="bs_settings">BookSearch - Settings</string>
    <string name="choose_language">Choose language</string>
    <string name="deleteFromFavCheck">Are you sure you want to remove</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="remove">Remove?</string>
    <string name="error_while_connecting_to_amazon">Error while connecting to Amazon.</string>
    <string name="error_while_reading_answer_from_amazon">Error while reading answer from Amazon...</string>
    <string name="no_search_results_found">No search results found...</string>
    <string name="database_missing">Error while creating the favorites database...</string>
    <string name="serching">Searching ...</string>
    <string name="please_type_in">Please type in a book title, isbn or keywords to search for.</string>
</resources>
